<resources>
    <string name="app_name">Dynamic Engineering</string>
    <string name="no_internet">It appears that the app is not connected to the internet. Please check your internet connection.</string>
    <string name="network_error">Network error, could receive data, please try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_home">Home</string>
    <string name="label_notes">Notes</string>
    <string name="label_video">Video</string>
    <string name="lable_about_cancer">ABOUT CANCER</string>
    <string name="label_join_us">Join Us</string>
    <string name="lable_cervical_cancer">Cervical Cancer</string>
    <string name="lable_description">Lorem ipsum dolor sit elit amet, consectetur adipiscing elit</string>
    <string name="lable_cancer_institute">CANCER INSTITUTE (WIA)</string>
    <string name="msg_description">A risk factor is anything that increases your chance of getting a disease such as cancer. Different cancers have different risk factors. For example, exposing skin to strong sunlight is a risk factor for skin cancer. Smoking is a risk factor for many cancers. But having a risk factor, or even several, does not mean that you will get the disease. Several risk factors can increase your chance of developing cervical cancer. Women without any of these risk factors rarely develop cervical cancer. Although these risk factors can increase the odds of developing cervical cancer, many women with these risks do not develop this disease. When you think about risk factors, it helps to focus on those you can change or avoid (like smoking or human papillomavirus infection), rather than those you cannot (such as your age and family history). A risk factor is anything that increases your chance of getting a disease such as cancer.</string>
    <string name="label_video_name">Video Name</string>
    <string name="setting_language">Language setting</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="btn_join_us">Join Us!</string>
    <string name="error_enter_name">Enter your Name</string>
    <string name="error_enter_dob">Enter DOB</string>
    <string name="error_enter_mobile_no">Enter Mobile Number</string>
    <string name="error_invalid_mobile_no">Invalid Mobile Number</string>
    <string name="error_enter_email_id">Enter Email ID</string>
    <string name="error_invalid_email_id">Invalid Email ID</string>
    <string name="hint_select_date">Select date</string>
    <string name="msg_thank_for_registration">
        Thank you for your joining us.
        \nWelcome to Cancer Awareness App.
        \n\nPowered by:
        \nCancer Institute (WIA)</string>
    <string name="title_language">Language</string>
    <string name="title_ok">Ok</string>
    <string name="msg_confirmation">Registration Confirmation</string>
    <string name="app_title">Dynamic Engineering</string>
    <string name="user_email">Email</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="hint_create_account">Don\'t have an account? Create</string>
    <string name="title_sub_title">First and meet new people</string>
    <string name="title_bottom_menu_home">Home</string>
    <string name="title_bottom_menu_notes">Notes</string>
    <string name="title_bottom_menu_video">Video</string>
    <string name="invalid_username">Invalid e-mail address</string>
    <string name="invalid_password">The password must be> 4 characters long</string>
    <string name="label_subject">Subject</string>
    <string name="label_pdf_list">Pdf List</string>
    <string name="label_pdf">Pdf</string>
</resources>