<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imgLoginLogo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/sample_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.task.utils.font.CustomFontEditTextBold
            android:id="@+id/edtLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:gravity="start"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions|textEmailAddress"
            android:paddingBottom="@dimen/_10sdp"
            android:singleLine="true"
            android:text="dhivyarajagopal90@gmail.com"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginLogo" />


        <com.task.utils.font.CustomFontEditTextBold
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:gravity="start"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/_10sdp"
            android:singleLine="true"
            android:text="Ly3eEK"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLoginUsername" />

        <ImageView
            android:id="@+id/imgLoginEye"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:src="@drawable/ic_hide_eye"
            android:tint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLoginUsername" />


        <com.task.utils.font.CustomFontButtonBold
            android:id="@+id/btnLoginSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/btn_registration_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />

        <com.task.utils.font.CustomFontTextViewBold
            android:id="@+id/tvLoginForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginSubmit" />

        <com.task.utils.font.CustomFontTextViewBold
            android:id="@+id/tvLoginCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/hint_create_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/loader_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>