<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import
            alias="View"
            type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="matrix"
                android:src="@drawable/detail_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="matrix"
                android:src="@color/blur_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <include
                android:id="@+id/inlDetailHeader"
                layout="@layout/layout_app_header" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@+id/inlDetailHeader">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/imgDetailHeader"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/detail_banner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.task.utils.font.CustomFontTextViewRegular
                        android:id="@+id/tvDetailTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:gravity="center"
                        android:text="@string/lable_cervical_cancer"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgDetailHeader" />

                    <com.task.utils.font.CustomFontTextViewRegular
                        android:id="@+id/tvDetailDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="start"
                        android:lineSpacingExtra="@dimen/_5sdp"
                        android:text="@string/msg_description"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

                    <ImageView
                        android:id="@+id/imgDetailVideoOne"
                        android:layout_width="@dimen/_33sdp"
                        android:layout_height="@dimen/_33sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/ic_link"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailDescription" />

                    <com.task.utils.font.CustomFontTextViewBold
                        android:id="@+id/tvDetailVideoNameOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_28sdp"
                        android:text="@string/label_video_name"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgDetailVideoOne"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailDescription" />

                    <ImageView
                        android:id="@+id/imgDetailVideoTwo"
                        android:layout_width="@dimen/_33sdp"
                        android:layout_height="@dimen/_33sdp"
                        android:src="@drawable/ic_link"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailVideoNameOne" />

                    <com.task.utils.font.CustomFontTextViewBold
                        android:id="@+id/tvDetailVideoNameTwo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_video_name"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgDetailVideoTwo"
                        app:layout_constraintTop_toBottomOf="@+id/imgDetailVideoOne" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>